# amr-projekt

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dashboard-Start-Live-Betrieb.md  README.md  abschlussbericht.md  audit_report.md  beamer.md  benutzerhandbuch.md  mkdocs.yml  mypy.ini  reproduzierbarkeit.md  ruff.toml  run_claude_audit.sh  systemdokumentation.md  validierung_todo.md
.claude/: settings.local.json
amr/: CLAUDE.md  LICENSE
amr/pi5/ros2_ws/src/my_bot/: README.md  package.xml  setup.py
amr/pi5/ros2_ws/src/my_bot/config/: amr_camera.yaml  mapper_params_online_async.yaml  nav2_params.yaml
amr/pi5/ros2_ws/src/my_bot/launch/: full_stack.launch.py
amr/pi5/ros2_ws/src/my_bot/maps/: testfeld.pgm  testfeld.yaml
amr/pi5/ros2_ws/src/my_bot/my_bot/: amr_utils.py  aruco_docking.py  audio_feedback_node.py  can_bridge_node.py  can_validation_test.py  cliff_latency_test.py  cliff_safety_node.py  dashboard_bridge.py  dashboard_latency_test.py  docking_test.py  encoder_test.py  gemini_semantic_node.py  hailo_inference_node.py  hailo_udp_receiver_node.py  imu_results.json  imu_test.py  kinematic_test.py  motor_test.py  nav_square_test.py  nav_test.py  odom_to_tf.py  pid_tuning.py  respeaker_doa_node.py  rotation_test.py  rplidar_test.py  sensor_test.py  serial_latency_logger.py  slam_validation.py  straight_drive_test.py  tts_speak_node.py  voice_command_node.py
amr/pi5/ros2_ws/src/my_bot/scripts/: aruco_docking.py
dashboard/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md  (+21 more)
(+312 files in other folders)
